--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.6",
     "tailwindcss-animate": "^1.0.7",
+    "web-bip39": "^0.0.3",
     "zod": "^3.25.28"
   },
   "devDependencies": {
